--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>
-    Movie ratings
+    CinemaSpot
     </title>
         <head>
             <meta charset="utf-8">
