--- a/toprated.html
+++ b/toprated.html
@@ -1,46 +1,40 @@
-<!DOCTYPE html>
-<html>
-  <title>
-    CinemaSpot
-    </title>
-        <head>
-            <meta charset="utf-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-            <!-- Bootstrap CSS -->
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-            <!-- Bootstrap Icons CSS -->
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-            <!-- Personal CSS Link -->
-            <link rel="stylesheet" type="text/css" href="style.css">
-            <!-- Bootstrap JavaScript -->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-        </head>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>CinemaSpot — 100% Top Rated</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <style>body { padding-top: 70px; }</style>
+</head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-    <div class="container">
-        <a class="navbar-brand" href="index.html"><i class="bi bi-film"></i> Movies</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html"><i class="bi bi-house-door-fill"></i> Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="toprated.html"><i class="bi bi-star"></i> Top Rated</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="ratings.html"><i class="bi bi-list-ol"></i> Ratings</a>
-                </li>
-				<li class="nav-item">
-                    <a class="nav-link" href="about.html"> About</a>
-                </li>
-            </ul>
-        </div>
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" href="index.html">CinemaSpot</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav"
+      aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="mainNav">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="ratings.html">Ratings</a></li>
+        <li class="nav-item"><a class="nav-link" href="toprated.html">100%</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+      </ul>
     </div>
-</nav>
-
+  </nav>
+  <main class="container">
+    <h1 class="mt-4">Top Rated (100%)</h1>
+    <p class="lead">Movies that scored 100%. Add your list below.</p>
+    <ul>
+      <li>Example Perfect Movie (2020)</li>
+    </ul>
+  </main>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script>
+    (function(){var path=window.location.pathname.split('/').pop();if(!path)path='index.html';var links=document.querySelectorAll('.navbar-nav .nav-link');links.forEach(function(link){var href=link.getAttribute('href');var linkFile=href?href.split('/').pop().split('?')[0].split('#')[0]:'';if(linkFile===path||(path===''&&linkFile==='index.html')){link.classList.add('active');var li=link.closest('.nav-item');if(li)li.classList.add('active');}});})();
+  </script>
 </body>
+</html>
