--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
         <div id="homeCarousel" class="carousel slide mb-4" data-ride="carousel">
           <ol class="carousel-indicators">
-            <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#homeCarousel" data-slide-to="1"></li>
-            <li data-target="#homeCarousel" data-slide-to="2"></li>
+            <li data-target="https://codehs.com/uploads/4db7b139924c2159d70f0ca3561dd6f5" data-slide-to="0" class="active"></li>
+            <li data-target="https://codehs.com/uploads/73eab87a47e3348f90f5d42891ab607f" data-slide-to="1"></li>
+            <li data-target="https://codehs.com/uploads/a642aa0ff413dec6f169895b841ea0cd" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -83,16 +83,16 @@
 
         <div class="row">
           <div class="col-md-4">
-            <h3>Featured</h3>
-            <p>Short text about featured movies or top picks.</p>
+            <h3>The Meg (51%)</h3>
+            <p>The Meg is a science fiction action film about an expert deep-sea rescue diver, Jonas Taylor (Jason Statham), who is recruited to save a crew trapped at the bottom of the ocean by an attack from a massive, 75-foot-long prehistoric shark called the megalodon</p>
           </div>
           <div class="col-md-4">
-            <h3>Latest Ratings</h3>
-            <p>Quick preview of recent ratings; link to Ratings page for full list.</p>
+            <h3>We Can Be Heroes (60%)</h3>
+            <p>We Can Be Heroes is a 2020 Netflix superhero film in which the children of Earth's superheroes must team up to rescue their parents from alien invaders and save the planet.</p>
           </div>
           <div class="col-md-4">
-            <h3>About</h3>
-            <p>Short about blurb with a link to the About page.</p>
+            <h3>Birdemic: Shock and terror (2%)</h3>
+            <p>Birdemic: Shock and Terror is a 2010 independent film about a romantic couple whose getaway is interrupted by a swarm of birds attacking their Northern California town</p>
           </div>
         </div>
       </div>
