--- a/ratings.html
+++ b/ratings.html
@@ -34,8 +34,22 @@
           <tr><th>Movie</th><th>Rating</th><th>Year</th></tr>
         </thead>
         <tbody>
-          <tr><td>Example Movie A</td><td>9.2</td><td>2024</td></tr>
-          <tr><td>Example Movie B</td><td>8.7</td><td>2023</td></tr>
+          <tr><td>Free Guy</td><td>89%</td><td>2021</td></tr>
+          <tr><td>We Can be Heros</td><td>60%</td><td>2020</td></tr>
+            <tr><td>Shazam</td><td>81%</td><td>2019</td></tr>
+          <tr><td>Hellboy</td><td>45%</td><td>2019</td></tr>
+          <tr><td>Gamenight</td><td>79%</td><td>2018</td></tr>
+          <tr><td>The Meg</td><td>51%</td><td>2018</td></tr>
+           <tr><td>Sonic the hedgehog</td><td>67%</td><td>2020</td></tr>
+           <tr><td>After Earth</td><td>7%</td><td>2013</td></tr>
+          <tr><td>X-Men: First Class</td><td>89%</td><td>2011</td></tr>
+          <tr><td>Birdemic: Shock and Terror</td><td>2%</td><td>2010</td></tr>
+          <tr><td>Role Models</td><td>88%</td><td>2008</td></tr>   
+          <tr><td>Happy Feet</td><td>73%</td><td>2006</td></tr>
+          <tr><td>Solaris</td><td>85%</td><td>2002</td></tr>  
+          <tr>><td>A.I. Artificial Intelligence</td></td><td>85%</td><td>2001</td></tr>      
+          <tr><td>Cast Away</td><td>90%</td><td>2000</td></tr>
+
         </tbody>
       </table>
     </div>
