--- a/ratings.html
+++ b/ratings.html
@@ -34,6 +34,7 @@
           <tr><th>Movie</th><th>Rating</th><th>Year</th></tr>
         </thead>
         <tbody>
+          <tr><td>The Black Phone</td><td>87%</td><td>2021</td></tr>
           <tr><td>Free Guy</td><td>89%</td><td>2021</td></tr>
           <tr><td>We Can be Heros</td><td>60%</td><td>2020</td></tr>
             <tr><td>Shazam</td><td>81%</td><td>2019</td></tr>
@@ -49,6 +50,8 @@
           <tr><td>Solaris</td><td>85%</td><td>2002</td></tr>  
           <tr>><td>A.I. Artificial Intelligence</td></td><td>85%</td><td>2001</td></tr>      
           <tr><td>Cast Away</td><td>90%</td><td>2000</td></tr>
+          <tr><td>Tron</td><td>72%</td><td>1982</td></tr>
+
 
         </tbody>
       </table>
