--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="col-12">
         <h1 class="mt-4">Welcome to CinemaSpot</h1>
-        <p class="lead">This is your main index page. Use the navbar to navigate the site.</p>
+        <p class="lead">This is where we rate movies and make sure you pick the right movies to watch.</p>
 
         <div id="homeCarousel" class="carousel slide mb-4" data-ride="carousel">
           <ol class="carousel-indicators">
@@ -50,21 +50,21 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/img/sports-q-c-1600-500-1.jpg" class="d-block w-100" alt="Slide 1">
+              <img src="https://codehs.com/uploads/4db7b139924c2159d70f0ca3561dd6f5" class="d-block w-100" alt="Slide 1">
               <div class="carousel-caption d-none d-md-block">
                 <h5>First Thumbnail label</h5>
                 <p>Short description for the first slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/img/sports-q-c-1600-500-2.jpg" class="d-block w-100" alt="Slide 2">
+              <img src="https://codehs.com/uploads/73eab87a47e3348f90f5d42891ab607f" class="d-block w-100" alt="Slide 2">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Second Thumbnail label</h5>
                 <p>Short description for the second slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/img/sports-q-c-1600-500-3.jpg" class="d-block w-100" alt="Slide 3">
+              <img src="https://codehs.com/uploads/a642aa0ff413dec6f169895b841ea0cd" class="d-block w-100" alt="Slide 3">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Third Thumbnail label</h5>
                 <p>Short description for the third slide.</p>
