--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
             <div class="carousel-item active">
               <img src="https://codehs.com/uploads/4db7b139924c2159d70f0ca3561dd6f5" class="d-block w-100" alt="Slide 1">
               <div class="carousel-caption d-none d-md-block">
-                <h5>First Thumbnail label</h5>
-                <p>Short description for the first slide.</p>
+                <h5>Predator Badlands</h5>
+                <p>Predator: Badlands has achieved "Off the charts" success by setting a franchise record for the biggest global and domestic opening in the Predator series' history</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="https://codehs.com/uploads/73eab87a47e3348f90f5d42891ab607f" class="d-block w-100" alt="Slide 2">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Second Thumbnail label</h5>
-                <p>Short description for the second slide.</p>
+                <h5>Back to the Future:40th aniversary</h5>
+                <p>The 40th-anniversary re-release of Back to the Future in theaters for a limited engagement has proven to be a commercial success, with fans flocking to see the classic on the big screen once again</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="https://codehs.com/uploads/a642aa0ff413dec6f169895b841ea0cd" class="d-block w-100" alt="Slide 3">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Third Thumbnail label</h5>
-                <p>Short description for the third slide.</p>
+                <h5>Tron:Ares</h5>
+                <p>Tron: Ares is considered a box office disappointment, failing to meet expectations and likely to lose the studio money. Despite opening at number one domestically with a $33.5 million debut, its $60 million global opening fell short of its high budget.</p>
               </div>
             </div>
           </div>
