Add images and descriptions for movie entries

--- a/index.html
+++ b/index.html
@@ -83,14 +83,17 @@
 
         <div class="row">
           <div class="col-md-4">
+             <img src="https://codehs.com/uploads/6356f3e1169daf4ec256104f4dd83f3b">
             <h3>The Meg (51%)</h3>
             <p>The Meg is a science fiction action film about an expert deep-sea rescue diver, Jonas Taylor (Jason Statham), who is recruited to save a crew trapped at the bottom of the ocean by an attack from a massive, 75-foot-long prehistoric shark called the megalodon</p>
           </div>
           <div class="col-md-4">
+            <img src="https://codehs.com/uploads/a0deae9d8d14ea9cb0b2b4784dc5dc09">
             <h3>We Can Be Heroes (60%)</h3>
             <p>We Can Be Heroes is a 2020 Netflix superhero film in which the children of Earth's superheroes must team up to rescue their parents from alien invaders and save the planet.</p>
           </div>
           <div class="col-md-4">
+            <img src="https://codehs.com/uploads/fb33218b758276f1fbb2b48e605eec11">
             <h3>Birdemic: Shock and terror (2%)</h3>
             <p>Birdemic: Shock and Terror is a 2010 independent film about a romantic couple whose getaway is interrupted by a swarm of birds attacking their Northern California town</p>
           </div>
