Add multiple Leprechaun movie entries to ratings

--- a/ratings.html
+++ b/ratings.html
@@ -35,6 +35,7 @@
         </thead>
         <tbody>
           <tr><td>Predator</td><td>82%</td><td>2025</td></tr>
+          <tr><td>Top Gun: Maverick</td><td>92%</td><td>2022</td></tr>
           <tr><td>The Black Phone</td><td>87%</td><td>2021</td></tr>
           <tr><td>Free Guy</td><td>89%</td><td>2021</td></tr>
           <tr><td>We Can be Heros</td><td>60%</td><td>2020</td></tr>
@@ -48,9 +49,17 @@
           <tr><td>Birdemic: Shock and Terror</td><td>2%</td><td>2010</td></tr>
           <tr><td>Role Models</td><td>88%</td><td>2008</td></tr>   
           <tr><td>Happy Feet</td><td>73%</td><td>2006</td></tr>
+          <tr><td>Leprechaun: Back 2 tha Hood</td><td>20%</td><td>2003</td></tr> 
           <tr><td>Solaris</td><td>85%</td><td>2002</td></tr>  
           <tr>><td>A.I. Artificial Intelligence</td></td><td>85%</td><td>2001</td></tr>      
           <tr><td>Cast Away</td><td>90%</td><td>2000</td></tr>
+        <tr><td>Leprechaun In the Hood</td><td>30%</td><td>2000</td></tr>
+        <tr><td>Leprechaun 4: In Space</td><td>39%</td><td>1996</td></tr>
+        <tr><td>Leprechaun 3</td><td>26%</td><td>1995</td></tr>
+         <tr><td>Pulp Fiction</td><td>92%</td><td>1994</td></tr>
+        <tr><td>Leprechaun 2</td><td>19%</td><td>1994</td></tr>
+         <tr><td>Leprechaun</td><td>34%</td><td>1993</td></tr>
+        <tr><td>Top Gun</td><td>72%</td><td>1986</td></tr>
           <tr><td>Tron</td><td>72%</td><td>1982</td></tr>
 
 
