Update movie title from 'Predator' to 'Predator:Badlands'

--- a/ratings.html
+++ b/ratings.html
@@ -34,7 +34,7 @@
           <tr><th>Movie</th><th>Rating</th><th>Year</th></tr>
         </thead>
         <tbody>
-          <tr><td>Predator</td><td>82%</td><td>2025</td></tr>
+          <tr><td>Predator:Badlands</td><td>82%</td><td>2025</td></tr>
           <tr><td>Top Gun: Maverick</td><td>92%</td><td>2022</td></tr>
           <tr><td>The Black Phone</td><td>87%</td><td>2021</td></tr>
           <tr><td>Free Guy</td><td>89%</td><td>2021</td></tr>
