--- a/toprated.html
+++ b/toprated.html
@@ -27,7 +27,9 @@
     <h1 class="mt-4">Top Rated (100%)</h1>
     <p class="lead">Movies that scored 100%. Add your list below.</p>
     <ul>
-      <li>Example Perfect Movie (2020)</li>
+      <tr><td>Star Wars: Episode V - The Empire Strikes Back</td><td>1980</td></tr>
+      <tr><td>Goodfellas</td><td>1990</td></tr>
+      <tr><td>ToyStory</td><td>1995</td></tr>
     </ul>
   </main>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
