Add 'Mad Max: Fury Road' to ratings table

--- a/ratings.html
+++ b/ratings.html
@@ -44,6 +44,7 @@
           <tr><td>Gamenight</td><td>79%</td><td>2018</td></tr>
           <tr><td>The Meg</td><td>51%</td><td>2018</td></tr>
            <tr><td>Sonic the hedgehog</td><td>67%</td><td>2020</td></tr>
+          <tr><td>Mad Max: Fury Road</td><td>99%</td><td>2015</td></tr>
            <tr><td>After Earth</td><td>7%</td><td>2013</td></tr>
           <tr><td>X-Men: First Class</td><td>89%</td><td>2011</td></tr>
           <tr><td>Birdemic: Shock and Terror</td><td>2%</td><td>2010</td></tr>
