Add new top-rated movies to the list

--- a/toprated.html
+++ b/toprated.html
@@ -27,9 +27,11 @@
     <h1 class="mt-4">Top Rated (100%)</h1>
     <p class="lead">Movies that scored 100%. Add your list below.</p>
     <ul>
-      <tr><td>Star Wars: Episode V - The Empire Strikes Back</td><td>1980</td></tr>
-      <tr><td>Goodfellas</td><td>1990</td></tr>
+      <tr><td>The Departed</td><td>2006</td></tr>
       <tr><td>ToyStory</td><td>1995</td></tr>
+       <tr><td>Goodfellas</td><td>1990</td></tr>
+      <tr><td>Star Wars: Episode V - The Empire Strikes Back</td><td>1980</td></tr>
+      <tr><td>The Godfather Part II</td><td>1974</td></tr>
     </ul>
   </main>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
