--- a/ratings.html
+++ b/ratings.html
@@ -39,15 +39,18 @@
           <tr><td>The Black Phone</td><td>87%</td><td>2021</td></tr>
           <tr><td>Free Guy</td><td>89%</td><td>2021</td></tr>
           <tr><td>We Can be Heros</td><td>60%</td><td>2020</td></tr>
+          <tr><td>Sonic the hedgehog</td><td>67%</td><td>2020</td></tr>
             <tr><td>Shazam</td><td>81%</td><td>2019</td></tr>
           <tr><td>Hellboy</td><td>45%</td><td>2019</td></tr>
           <tr><td>Gamenight</td><td>79%</td><td>2018</td></tr>
           <tr><td>The Meg</td><td>51%</td><td>2018</td></tr>
-           <tr><td>Sonic the hedgehog</td><td>67%</td><td>2020</td></tr>
+           <tr><td>Blade Runner 2049</td><td>98%</td><td>2017</td></tr>
+          <tr><td>La La Land</td><td>96%</td><td>2016</td></tr>
           <tr><td>Mad Max: Fury Road</td><td>99%</td><td>2015</td></tr>
            <tr><td>After Earth</td><td>7%</td><td>2013</td></tr>
           <tr><td>X-Men: First Class</td><td>89%</td><td>2011</td></tr>
           <tr><td>Birdemic: Shock and Terror</td><td>2%</td><td>2010</td></tr>
+          <tr><td>Inglourious Basterds</td><td>99%</td><td>2009</td></tr>   
           <tr><td>Role Models</td><td>88%</td><td>2008</td></tr>   
           <tr><td>Happy Feet</td><td>73%</td><td>2006</td></tr>
           <tr><td>Leprechaun: Back 2 tha Hood</td><td>20%</td><td>2003</td></tr> 
@@ -59,9 +62,15 @@
         <tr><td>Leprechaun 3</td><td>26%</td><td>1995</td></tr>
          <tr><td>Pulp Fiction</td><td>92%</td><td>1994</td></tr>
         <tr><td>Leprechaun 2</td><td>19%</td><td>1994</td></tr>
+        <tr><td>The Lion King</td><td>95%</td><td>1994</td></tr>
          <tr><td>Leprechaun</td><td>34%</td><td>1993</td></tr>
+         <tr><td>Terminator 2: Judgement Day</td><td>97%</td><td>1991</td></tr>
         <tr><td>Top Gun</td><td>72%</td><td>1986</td></tr>
+        <tr><td>Aliens</td><td>95%</td><td>1986</td></tr>
+        <tr><td>The Terminator</td><td>96%</td><td>1984</td></tr>
           <tr><td>Tron</td><td>72%</td><td>1982</td></tr>
+        <tr><td>Raiders of the Lost Ark</td><td>99%</td><td>1981</td></tr>
+        <tr><td>The Godfather</td><td>99%</td><td>1972</td></tr>
 
 
         </tbody>
