Add new movie ratings to ratings.html

--- a/ratings.html
+++ b/ratings.html
@@ -35,6 +35,7 @@
         </thead>
         <tbody>
           <tr><td>Predator:Badlands</td><td>82%</td><td>2025</td></tr>
+          <tr><td>Sinners</td><td>94%</td><td>2025</td></tr>
           <tr><td>Top Gun: Maverick</td><td>92%</td><td>2022</td></tr>
           <tr><td>The Black Phone</td><td>87%</td><td>2021</td></tr>
           <tr><td>Free Guy</td><td>89%</td><td>2021</td></tr>
@@ -69,8 +70,10 @@
         <tr><td>Aliens</td><td>95%</td><td>1986</td></tr>
         <tr><td>The Terminator</td><td>96%</td><td>1984</td></tr>
           <tr><td>Tron</td><td>72%</td><td>1982</td></tr>
+        <tr><td>Miracle on Ice</td><td>99%</td><td>1981</td></tr>
         <tr><td>Raiders of the Lost Ark</td><td>99%</td><td>1981</td></tr>
         <tr><td>The Godfather</td><td>99%</td><td>1972</td></tr>
+        <tr><td>Citizen Kane</td><td>99%</td><td>1941</td></tr>
 
 
         </tbody>
