Replace unordered list with a responsive table

--- a/toprated.html
+++ b/toprated.html
@@ -26,15 +26,23 @@
   <main class="container">
     <h1 class="mt-4">Top Rated (100%)</h1>
     <p class="lead">Movies that scored 100%. Add your list below.</p>
-    <ul>
-      <tr><td>Whiplash</td><td>2016</td></tr>
-      <tr><td>The Departed</td><td>2006</td></tr>
-      <tr><td>ToyStory</td><td>1995</td></tr>
-       <tr><td>Goodfellas</td><td>1990</td></tr>
-      <tr><td>Star Wars: Episode V - The Empire Strikes Back</td><td>1980</td></tr>
-      <tr><td>The Godfather Part II</td><td>1974</td></tr>
-      <tr><td>Seven Samurai</td><td>1954</td></tr>
-    </ul>
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr><th>Movie</th><th>Rating</th><th>Year</th></tr>
+        </thead>
+        <tbody>
+          <tr><td>Whiplash</td><td>2016</td></tr>
+          <tr><td>The Departed</td><td>2006</td></tr>
+          <tr><td>ToyStory</td><td>1995</td></tr>
+          <tr><td>Goodfellas</td><td>1990</td></tr>
+          <tr><td>Star Wars: Episode V - The Empire Strikes Back</td><td>1980</td></tr>
+          <tr><td>The Godfather Part II</td><td>1974</td></tr>
+          <tr><td>Seven Samurai</td><td>1954</td></tr>
+      
+        </tbody>
+      </table>
+    </div>
   </main>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
