Add search form to ratings table

--- a/ratings.html
+++ b/ratings.html
@@ -33,6 +33,10 @@
         <thead>
           <tr><th>Movie</th><th>Rating</th><th>Year</th></tr>
         </thead>
+        <form id="search-form" action="/search" method="get">
+  <input type="search" id="search-input" name="q" placeholder="Search...">
+  <button type="submit">Search</button>
+</form>
         <tbody>
           <tr><td>Predator:Badlands</td><td>82%</td><td>2025</td></tr>
           <tr><td>Sinners</td><td>94%</td><td>2025</td></tr>
