--- a/toprated.html
+++ b/toprated.html
@@ -29,7 +29,7 @@
     <div class="table-responsive">
       <table class="table table-striped">
         <thead>
-          <tr><th>Movie</th><th>Rating</th><th>Year</th></tr>
+          <tr><th>Movie</th><th>Year</th></tr>
         </thead>
         <tbody>
           <tr><td>Whiplash</td><td>2016</td></tr>
