--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="index.html">CinemaSpot</a>
+   <img src="https://codehs.com/uploads/4f9e0c7765720cb5de2b986d2d1e5489" alt="A happy dog" width="50">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav"
       aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
