--- a/ratings.html
+++ b/ratings.html
@@ -35,7 +35,8 @@
         </thead>
 
         <tbody>
-          
+          <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
+
           <tr><td>Predator:Badlands</td><td>82%</td><td>2025</td></tr>
           <tr><td>Sinners</td><td>94%</td><td>2025</td></tr>
           <tr><td>Top Gun: Maverick</td><td>92%</td><td>2022</td></tr>
