--- a/ratings.html
+++ b/ratings.html
@@ -34,7 +34,7 @@
           <tr><th>Movie</th><th>Rating</th><th>Year</th></tr>
         </thead>
 
-        <tbody>
+        <tbody id="myUL">
           <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
 
           <tr><td>Predator:Badlands</td><td>82%</td><td>2025</td></tr>
