--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
-
+        <div>
+          <h2>Movies of the Week</h2>
+        </div
         <div class="row">
           <div class="col-md-4">
              <img src="https://codehs.com/uploads/6356f3e1169daf4ec256104f4dd83f3b" width="100px">
