--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
         </div
         <div class="row">
           <div class="col-md-4">
-             <img src="https://codehs.com/uploads/6356f3e1169daf4ec256104f4dd83f3b" width="100px">
-            <h3>The Meg (51%)</h3>
-            <p>The Meg is a science fiction action film about an expert deep-sea rescue diver, Jonas Taylor (Jason Statham), who is recruited to save a crew trapped at the bottom of the ocean by an attack from a massive, 75-foot-long prehistoric shark called the megalodon</p>
+             <img src="https://codehs.com/uploads/05b67fcb13bf8fbb27c192c1b49a92b3" width="100px">
+            <h3>The Breakfast Club (91%)</h3>
+            <p>The Breakfast Club is a 1985 coming-of-age film by John Hughes about five high school students who are forced to spend a Saturday in detention together.</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/a0deae9d8d14ea9cb0b2b4784dc5dc09" width="100px">
-            <h3>We Can Be Heroes (60%)</h3>
-            <p>We Can Be Heroes is a 2020 Netflix superhero film in which the children of Earth's superheroes must team up to rescue their parents from alien invaders and save the planet.</p>
+            <img src="https://codehs.com/uploads/424565516703c8006524cae7f880febf" width="100px">
+            <h3>Rescue Dawn (80%)</h3>
+            <p>During the Vietnam War, German-born US pilot Dieter Dengler is shot down over Laos and taken prisoner. Tortured and starved, Dieter resolves to escape with fellow prisoners Duane and Gene. When they finally make their daring break into the jungle, the escapees discover that the dense, humid rainforest can be a terrifying prison in itself.</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/fb33218b758276f1fbb2b48e605eec11" width="100px">
-            <h3>Birdemic: Shock and terror (2%)</h3>
-            <p>Birdemic: Shock and Terror is a 2010 independent film about a romantic couple whose getaway is interrupted by a swarm of birds attacking their Northern California town</p>
+            <img src="https://codehs.com/uploads/50663e9b836bd940c322d31bf9909be4" width="100px">
+            <h3>Space Jam (62%)</h3>
+            <p>Space Jam is a 1996 live-action/animated sports comedy where basketball star Michael Jordan teams up with the Looney Tunes to win a basketball game against aliens who have stolen the talent from NBA players</p>
           </div>
         </div>
       </div>
