--- a/toprated.html
+++ b/toprated.html
@@ -33,8 +33,11 @@
         </thead>
         <tbody>
           <tr><td>Whiplash</td><td>2016</td></tr>
+          <tr><td>Intersteller</td><td>2014</td></tr>
           <tr><td>The Departed</td><td>2006</td></tr>
+           <tr><td>Good Will Hunting</td><td>1997</td></tr>
           <tr><td>ToyStory</td><td>1995</td></tr>
+          <tr><td>The Shawshank Redemption</td><td>1994</td></tr>
           <tr><td>Goodfellas</td><td>1990</td></tr>
           <tr><td>Star Wars: Episode V - The Empire Strikes Back</td><td>1980</td></tr>
           <tr><td>The Godfather Part II</td><td>1974</td></tr>
