--- a/ratings.html
+++ b/ratings.html
@@ -48,18 +48,24 @@
           <tr><td>The Meg</td><td>51%</td><td>2018</td></tr>
            <tr><td>Blade Runner 2049</td><td>98%</td><td>2017</td></tr>
           <tr><td>La La Land</td><td>96%</td><td>2016</td></tr>
+        <tr><td>Whiplash</td><td>100%</td><td>2016</td></tr>
           <tr><td>Mad Max: Fury Road</td><td>99%</td><td>2015</td></tr>
+        <tr><td>Intersteller</td><td>100%</td><td>2014</td></tr>
            <tr><td>After Earth</td><td>7%</td><td>2013</td></tr>
           <tr><td>X-Men: First Class</td><td>89%</td><td>2011</td></tr>
           <tr><td>Birdemic: Shock and Terror</td><td>2%</td><td>2010</td></tr>
           <tr><td>Inglourious Basterds</td><td>99%</td><td>2009</td></tr>   
-          <tr><td>Role Models</td><td>88%</td><td>2008</td></tr>   
+          <tr><td>Role Models</td><td>88%</td><td>2008</td></tr>  
+        <tr><td>Star Wars: The Clone Wars</td><td>30%</td><td>2008</td></tr>   
           <tr><td>Happy Feet</td><td>73%</td><td>2006</td></tr>
+        <tr><td>The Departed</td><td>100%</td><td>2006</td></tr>
           <tr><td>Leprechaun: Back 2 tha Hood</td><td>20%</td><td>2003</td></tr> 
           <tr><td>Solaris</td><td>85%</td><td>2002</td></tr>  
+         <tr><td>Star Wars: Episode II - Attack of the Clones</td><td>75%</td><td>2002</td></tr> 
           <tr>><td>A.I. Artificial Intelligence</td></td><td>85%</td><td>2001</td></tr>      
           <tr><td>Cast Away</td><td>90%</td><td>2000</td></tr>
-        <tr><td>Leprechaun In the Hood</td><td>30%</td><td>2000</td></tr>
+        <tr><td>Leprechaun In the Hood</td><td>30%</td><td>2000</td></tr>     
+        <tr><td>Star Wars: Episode I - The Phantom Menace</td><td>51%</td><td>1999</td></tr>
         <tr><td>Leprechaun 4: In Space</td><td>39%</td><td>1996</td></tr>
         <tr><td>Leprechaun 3</td><td>26%</td><td>1995</td></tr>
          <tr><td>Pulp Fiction</td><td>92%</td><td>1994</td></tr>
@@ -67,13 +73,19 @@
         <tr><td>The Lion King</td><td>95%</td><td>1994</td></tr>
          <tr><td>Leprechaun</td><td>34%</td><td>1993</td></tr>
          <tr><td>Terminator 2: Judgement Day</td><td>97%</td><td>1991</td></tr>
+        <tr><td>GoodFellas</td><td>100%</td><td>1990</td></tr>
         <tr><td>Top Gun</td><td>72%</td><td>1986</td></tr>
         <tr><td>Aliens</td><td>95%</td><td>1986</td></tr>
         <tr><td>The Terminator</td><td>96%</td><td>1984</td></tr>
+        <tr><td>Return of the Jedi</td><td>88%</td><td>1983<td></tr>
           <tr><td>Tron</td><td>72%</td><td>1982</td></tr>
         <tr><td>Miracle on Ice</td><td>99%</td><td>1981</td></tr>
         <tr><td>Raiders of the Lost Ark</td><td>99%</td><td>1981</td></tr>
+        <tr><td>Star Wars: Episode V - The Empire Strikes Back</td><td>100%</td><td>1980<td></tr>
+         <tr><td>Star Wars: Episode IV – A New Hope</td><td>92%</td><td>1974</td></tr>
+        <tr><td>The Godfather Part II</td><td>100%</td><td>1974</td></tr>
         <tr><td>The Godfather</td><td>99%</td><td>1972</td></tr>
+        <tr><td>Seven Samuri</td><td>100%</td><td>1954</td></tr>
         <tr><td>Citizen Kane</td><td>99%</td><td>1941</td></tr>
        
 
