--- a/ratings.html
+++ b/ratings.html
@@ -57,6 +57,7 @@
           <tr><td>Inglourious Basterds</td><td>99%</td><td>2009</td></tr>   
           <tr><td>Role Models</td><td>88%</td><td>2008</td></tr>  
         <tr><td>Star Wars: The Clone Wars</td><td>30%</td><td>2008</td></tr>   
+        <tr><td>Rescue Dawn</td><td>80%</td><td>2006</td></tr>
           <tr><td>Happy Feet</td><td>73%</td><td>2006</td></tr>
         <tr><td>The Departed</td><td>100%</td><td>2006</td></tr>
           <tr><td>Leprechaun: Back 2 tha Hood</td><td>20%</td><td>2003</td></tr> 
@@ -66,6 +67,7 @@
           <tr><td>Cast Away</td><td>90%</td><td>2000</td></tr>
         <tr><td>Leprechaun In the Hood</td><td>30%</td><td>2000</td></tr>     
         <tr><td>Star Wars: Episode I - The Phantom Menace</td><td>51%</td><td>1999</td></tr>
+            <tr><td>Space Jam</td><td>62%</td><td>1996</td></tr>
         <tr><td>Leprechaun 4: In Space</td><td>39%</td><td>1996</td></tr>
         <tr><td>Leprechaun 3</td><td>26%</td><td>1995</td></tr>
          <tr><td>Pulp Fiction</td><td>92%</td><td>1994</td></tr>
@@ -76,6 +78,7 @@
         <tr><td>GoodFellas</td><td>100%</td><td>1990</td></tr>
         <tr><td>Top Gun</td><td>72%</td><td>1986</td></tr>
         <tr><td>Aliens</td><td>95%</td><td>1986</td></tr>
+         <tr><td>The Breakfast Club</td><td>91%</td><td>1985</td></tr>
         <tr><td>The Terminator</td><td>96%</td><td>1984</td></tr>
         <tr><td>Return of the Jedi</td><td>88%</td><td>1983<td></tr>
           <tr><td>Tron</td><td>72%</td><td>1982</td></tr>
