--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
         </div
         <div class="row">
           <div class="col-md-4">
-             <img src="https://codehs.com/uploads/05b67fcb13bf8fbb27c192c1b49a92b3" width="100px">
-            <h3>The Breakfast Club (91%)</h3>
-            <p>The Breakfast Club is a 1985 coming-of-age film by John Hughes about five high school students who are forced to spend a Saturday in detention together.</p>
+             <img src="https://codehs.com/uploads/ebec67178151899e59b1c8b9971285f0" width="100px">
+            <h3>127 Hours (87%)</h3>
+            <p>Mountain climber Aron Ralston, who becomes trapped in an isolated Utah canyon when a boulder crushes his right arm. The film follows his five-day struggle for survival, during which he endures physical and emotional pain while reflecting on his life.</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/424565516703c8006524cae7f880febf" width="100px">
-            <h3>Rescue Dawn (80%)</h3>
-            <p>During the Vietnam War, German-born US pilot Dieter Dengler is shot down over Laos and taken prisoner. Tortured and starved, Dieter resolves to escape with fellow prisoners Duane and Gene. When they finally make their daring break into the jungle, the escapees discover that the dense, humid rainforest can be a terrifying prison in itself.</p>
+            <img src="https://codehs.com/uploads/4b1088bfbccc2f3a61ee6928563c0b4c" width="100px">
+            <h3>Cloudy With a Chance of Meatballs (85%)</h3>
+            <p>Cloudy With a Chance of Meatballs is the story of an aspiring inventor, Flint Lockwood, who creates a machine that turns water into food and launches it into the sky, causing it to rain food upon his town</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/50663e9b836bd940c322d31bf9909be4" width="100px">
-            <h3>Space Jam (62%)</h3>
-            <p>Space Jam is a 1996 live-action/animated sports comedy where basketball star Michael Jordan teams up with the Looney Tunes to win a basketball game against aliens who have stolen the talent from NBA players</p>
+            <img src="https://codehs.com/uploads/f416508ed32a1459df41c8ecd9566305" width="100px">
+            <h3>Space Jam: A New Legacy (39%)</h3>
+            <p>Superstar LeBron James and his young son, Dom, get trapped in digital space by a rogue AI. To get home safely, LeBron teams up with Bugs Bunny, Daffy Duck and the rest of the Looney Tunes gang for a high-stakes basketball game against the AI's digitized champions of the court -- a powered-up roster called the Goon Squad.</p>
           </div>
         </div>
       </div>
