--- a/index.html
+++ b/index.html
@@ -44,30 +44,30 @@
 
         <div id="homeCarousel" class="carousel slide mb-4" data-ride="carousel">
           <ol class="carousel-indicators">
-            <li data-target="https://codehs.com/uploads/4db7b139924c2159d70f0ca3561dd6f5" data-slide-to="0" class="active"></li>
-            <li data-target="https://codehs.com/uploads/73eab87a47e3348f90f5d42891ab607f" data-slide-to="1"></li>
-            <li data-target="https://codehs.com/uploads/a642aa0ff413dec6f169895b841ea0cd" data-slide-to="2"></li>
+            <li data-target="https://codehs.com/uploads/2980b0078862bacfc8020fcdc45ad926" data-slide-to="0" class="active"></li>
+            <li data-target="https://codehs.com/uploads/f3653951080411b771fdfd23b5326921" data-slide-to="1"></li>
+            <li data-target="https://codehs.com/uploads/17e6def250711a0adba751ad4e62777a" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://codehs.com/uploads/4db7b139924c2159d70f0ca3561dd6f5" class="d-block w-100" alt="Slide 1">
+              <img src="https://codehs.com/uploads/2980b0078862bacfc8020fcdc45ad926" class="d-block w-100" alt="Slide 1">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Predator Badlands</h5>
-                <p>Predator: Badlands has achieved "Off the charts" success by setting a franchise record for the biggest global and domestic opening in the Predator series' history</p>
+                <h5>Zootopia 2</h5>
+                <p>Zootopia 2: a massive box office success, earning an estimated $556.4 million globally in its opening weekend, making it the highest global opening for 2025 and the fourth-biggest of all time</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://codehs.com/uploads/73eab87a47e3348f90f5d42891ab607f" class="d-block w-100" alt="Slide 2">
+              <img src="https://codehs.com/uploads/f3653951080411b771fdfd23b5326921" class="d-block w-100" alt="Slide 2">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Back to the Future:40th aniversary</h5>
-                <p>The 40th-anniversary re-release of Back to the Future in theaters for a limited engagement has proven to be a commercial success, with fans flocking to see the classic on the big screen once again</p>
+                <h5>The Running Man</h5>
+                <p>The Running Man is a 2025 film where a desperate father, Ben Richards (Glen Powell), enters a deadly game show called "The Running Man" to win a billion dollars to pay for his sick daughter's medical care. As a contestant, he must survive for 30 days while being hunted by professional assassins in the real world.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://codehs.com/uploads/a642aa0ff413dec6f169895b841ea0cd" class="d-block w-100" alt="Slide 3">
+              <img src="https://codehs.com/uploads/17e6def250711a0adba751ad4e62777a" class="d-block w-100" alt="Slide 3">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Tron:Ares</h5>
-                <p>Tron: Ares is considered a box office disappointment, failing to meet expectations and likely to lose the studio money. Despite opening at number one domestically with a $33.5 million debut, its $60 million global opening fell short of its high budget.</p>
+                <h5>Wicked: For Good</h5>
+                <p> Wicked: For Good was a major success, breaking box office records for a musical adaptation by earning an estimated $150 million in North America and $226 million globally in its opening weekend. .</p>
               </div>
             </div>
           </div>
