--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     .carousel-item img { max-height: 500px; object-fit: cover; width: 100%; }
   </style>
 </head>
-<body>
+<body background-color="red">
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     <img src="https://codehs.com/uploads/4f9e0c7765720cb5de2b986d2d1e5489" alt="A happy dog" width="50">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav"
