--- a/ratings.html
+++ b/ratings.html
@@ -40,6 +40,7 @@
           <tr><td>Top Gun: Maverick</td><td>92%</td><td>2022</td></tr>
           <tr><td>The Black Phone</td><td>87%</td><td>2021</td></tr>
           <tr><td>Free Guy</td><td>89%</td><td>2021</td></tr>
+         <tr><td>Space Jam: A New Legacy</td><td>39%</td><td>2021</td></tr>
           <tr><td>We Can be Heros</td><td>60%</td><td>2020</td></tr>
           <tr><td>Sonic the hedgehog</td><td>67%</td><td>2020</td></tr>
             <tr><td>Shazam</td><td>81%</td><td>2019</td></tr>
@@ -53,7 +54,9 @@
         <tr><td>Intersteller</td><td>100%</td><td>2014</td></tr>
            <tr><td>After Earth</td><td>7%</td><td>2013</td></tr>
           <tr><td>X-Men: First Class</td><td>89%</td><td>2011</td></tr>
+        <tr><td>127 Hours</td><td>87%</td><td>2010</td></tr>
           <tr><td>Birdemic: Shock and Terror</td><td>2%</td><td>2010</td></tr>
+        <tr><td>Cloudy With a Chance of Meatballs</td><td>85%</td><td>2009</td></tr>  
           <tr><td>Inglourious Basterds</td><td>99%</td><td>2009</td></tr>   
           <tr><td>Role Models</td><td>88%</td><td>2008</td></tr>  
         <tr><td>Star Wars: The Clone Wars</td><td>30%</td><td>2008</td></tr>   
