--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@
         </div
         <div class="row">
           <div class="col-md-4">
-             <img src="https://codehs.com/uploads/ebec67178151899e59b1c8b9971285f0" width="100px">
-            <h3>127 Hours (87%)</h3>
-            <p>Mountain climber Aron Ralston, who becomes trapped in an isolated Utah canyon when a boulder crushes his right arm. The film follows his five-day struggle for survival, during which he endures physical and emotional pain while reflecting on his life.</p>
+             <img src="https://codehs.com/uploads/86139f04645e3a0325ceadc24b16a49a" width="100px">
+            <h3>Accepted (75%)</h3>
+            <p>After receiving his latest college rejection letter, senior Bartleby Gaines devises a novel way to fool everyone into thinking he is college-bound: Open his own university. Bartleby and his similarly stymied friends take over an abandoned building, create a fake Web site, hire a friend's uncle to pose as the dean, and -- presto -- a school is born. However, they do their jobs too well, and soon many other rejects try to gain admittance to the nonexistent South Harmon Institute of Technology.</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/4b1088bfbccc2f3a61ee6928563c0b4c" width="100px">
-            <h3>Cloudy With a Chance of Meatballs (85%)</h3>
-            <p>Cloudy With a Chance of Meatballs is the story of an aspiring inventor, Flint Lockwood, who creates a machine that turns water into food and launches it into the sky, causing it to rain food upon his town</p>
+            <img src="https://codehs.com/uploads/8529966dd7b244f8422f14cb280538f5" width="100px">
+            <h3>Superbad(98%)</h3>
+            <p>Two inseparable best friends navigate the last weeks of high school and are invited to a gigantic house party. Together with their nerdy friend, they spend a long day trying to score enough alcohol to supply the party and inebriate two girls in order to kick-start their sex lives before they go off to college. Their quest is complicated after one of them falls in with two inept cops who are determined to show him a good time.</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/f416508ed32a1459df41c8ecd9566305" width="100px">
-            <h3>Space Jam: A New Legacy (39%)</h3>
+            <img src="https://codehs.com/uploads/300bde2ff1d15f10466a6fdd40377d8e" width="100px">
+            <h3>Rocky(95%)</h3>
             <p>Superstar LeBron James and his young son, Dom, get trapped in digital space by a rogue AI. To get home safely, LeBron teams up with Bugs Bunny, Daffy Duck and the rest of the Looney Tunes gang for a high-stakes basketball game against the AI's digitized champions of the court -- a powered-up roster called the Goon Squad.</p>
           </div>
         </div>
