--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
 
         <div id="homeCarousel" class="carousel slide mb-4" data-ride="carousel">
           <ol class="carousel-indicators">
-            <li data-target="https://codehs.com/uploads/2980b0078862bacfc8020fcdc45ad926" data-slide-to="0" class="active"></li>
+            <li data-target="https://codehs.com/uploads/e0235d435e5fd0e216c2cfab458ac1e1" data-slide-to="0" class="active"></li>
             <li data-target="https://codehs.com/uploads/f3653951080411b771fdfd23b5326921" data-slide-to="1"></li>
             <li data-target="https://codehs.com/uploads/17e6def250711a0adba751ad4e62777a" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://codehs.com/uploads/2980b0078862bacfc8020fcdc45ad926" class="d-block w-100" alt="Slide 1">
+              <img src="https://codehs.com/uploads/e0235d435e5fd0e216c2cfab458ac1e1" class="d-block w-100" alt="Slide 1">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Zootopia 2</h5>
-                <p>Zootopia 2: a massive box office success, earning an estimated $556.4 million globally in its opening weekend, making it the highest global opening for 2025 and the fourth-biggest of all time</p>
+                <h5>Golden Globes</h5>
+                <p>Marlon Wayans and Skye P. Marshall are set to reveal this year’s nominees starting at 5:15 a.m. PT, with 11 categories shared exclusively on CBS Mornings at 5:30 a.m. PT. Awards observers can also watch a livestream of the 2026 Golden Globes nominations announcement on CBS News’ YouTube and TikTok channels.</p>
               </div>
             </div>
             <div class="carousel-item">
@@ -97,7 +97,7 @@
           <div class="col-md-4">
             <img src="https://codehs.com/uploads/300bde2ff1d15f10466a6fdd40377d8e" width="100px">
             <h3>Rocky(95%)</h3>
-            <p>Superstar LeBron James and his young son, Dom, get trapped in digital space by a rogue AI. To get home safely, LeBron teams up with Bugs Bunny, Daffy Duck and the rest of the Looney Tunes gang for a high-stakes basketball game against the AI's digitized champions of the court -- a powered-up roster called the Goon Squad.</p>
+            <p>Rocky is a small-time Philadelphia boxer going nowhere, until an unbelievable shot to fight the world heavyweight champion lights a fire inside him.</p>
           </div>
         </div>
       </div>
