--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="homeCarousel" class="carousel slide mb-4" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="https://codehs.com/uploads/e0235d435e5fd0e216c2cfab458ac1e1" data-slide-to="0" class="active"></li>
-            <li data-target="https://codehs.com/uploads/f3653951080411b771fdfd23b5326921" data-slide-to="1"></li>
+            <li data-target="https://codehs.com/uploads/e33597dcdcc515e3ebbb4deca27928f7" data-slide-to="1"></li>
             <li data-target="https://codehs.com/uploads/17e6def250711a0adba751ad4e62777a" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
@@ -57,10 +57,10 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://codehs.com/uploads/f3653951080411b771fdfd23b5326921" class="d-block w-100" alt="Slide 2">
+              <img src="https://codehs.com/uploads/e33597dcdcc515e3ebbb4deca27928f7" class="d-block w-100" alt="Slide 2">
               <div class="carousel-caption d-none d-md-block">
-                <h5>The Running Man</h5>
-                <p>The Running Man is a 2025 film where a desperate father, Ben Richards (Glen Powell), enters a deadly game show called "The Running Man" to win a billion dollars to pay for his sick daughter's medical care. As a contestant, he must survive for 30 days while being hunted by professional assassins in the real world.</p>
+                <h5>Anaconda</h5>
+                <p>‘Anaconda’ Director Debuts Unseen Footage for “Off-the-Rails” Comedy, Teases Future of Franchise</p>
               </div>
             </div>
             <div class="carousel-item">
