--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://codehs.com/uploads/17e6def250711a0adba751ad4e62777a" class="d-block w-100" alt="Slide 3">
+              <img src="https://codehs.com/uploads/800a693d0f5f27f63001183bddd1a2cb" class="d-block w-100" alt="Slide 3">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Wicked: For Good</h5>
-                <p> Wicked: For Good was a major success, breaking box office records for a musical adaptation by earning an estimated $150 million in North America and $226 million globally in its opening weekend. .</p>
+                <h5>Five Nights at Freddy's 2</h5>
+                <p> Box Office: ‘Five Nights at Freddy’s 2’ Opens to Huge $63M in U.S., ‘Zootopia 2’ Crosses $915M Globally</p>
               </div>
             </div>
           </div>
