--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://codehs.com/uploads/e0235d435e5fd0e216c2cfab458ac1e1" class="d-block w-100" alt="Slide 1">
+              <img src="https://codehs.com/uploads/e0235d435e5fd0e216c2cfab458ac1e1" class="d-block w-100" alt="Slide 1" width="100" height="80">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Golden Globes</h5>
                 <p>Marlon Wayans and Skye P. Marshall are set to reveal this year’s nominees starting at 5:15 a.m. PT, with 11 categories shared exclusively on CBS Mornings at 5:30 a.m. PT. Awards observers can also watch a livestream of the 2026 Golden Globes nominations announcement on CBS News’ YouTube and TikTok channels.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://codehs.com/uploads/e33597dcdcc515e3ebbb4deca27928f7" class="d-block w-100" alt="Slide 2">
+              <img src="https://codehs.com/uploads/e33597dcdcc515e3ebbb4deca27928f7" class="d-block w-100" alt="Slide 2" width="100" height="80">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Anaconda</h5>
                 <p>‘Anaconda’ Director Debuts Unseen Footage for “Off-the-Rails” Comedy, Teases Future of Franchise</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://codehs.com/uploads/800a693d0f5f27f63001183bddd1a2cb" class="d-block w-100" alt="Slide 3">
+              <img src="https://codehs.com/uploads/800a693d0f5f27f63001183bddd1a2cb" class="d-block w-100" alt="Slide 3"  width="100" height="80">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Five Nights at Freddy's 2</h5>
                 <p> Box Office: ‘Five Nights at Freddy’s 2’ Opens to Huge $63M in U.S., ‘Zootopia 2’ Crosses $915M Globally</p>
