--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         </div>
         <div>
           <h2>Movies of the Week</h2>
-        </div
+        </div>
+<br>
         <div class="row">
           <div class="col-md-4">
              <img src="https://codehs.com/uploads/86139f04645e3a0325ceadc24b16a49a" width="100px">
