--- a/ratings.html
+++ b/ratings.html
@@ -66,7 +66,7 @@
           <tr><td>Leprechaun: Back 2 tha Hood</td><td>20%</td><td>2003</td></tr> 
           <tr><td>Solaris</td><td>85%</td><td>2002</td></tr>  
          <tr><td>Star Wars: Episode II - Attack of the Clones</td><td>75%</td><td>2002</td></tr> 
-          <tr>><td>A.I. Artificial Intelligence</td></td><td>85%</td><td>2001</td></tr>      
+          <tr><td>A.I. Artificial Intelligence</td></td><td>85%</td><td>2001</td></tr>      
           <tr><td>Cast Away</td><td>90%</td><td>2000</td></tr>
         <tr><td>Leprechaun In the Hood</td><td>30%</td><td>2000</td></tr>     
         <tr><td>Star Wars: Episode I - The Phantom Menace</td><td>51%</td><td>1999</td></tr>
