--- a/toprated.html
+++ b/toprated.html
@@ -30,7 +30,7 @@
 
 <div class="card-group">
   <div class="card">
-    <img src="https://codehs.com/uploads/08c86ba94e961aad3581686400160fef" width="100" class="card-img-top" alt="...">
+    <img src="https://codehs.com/uploads/08c86ba94e961aad3581686400160fef" width="100" height="150" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Whiplash (2016)</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -40,7 +40,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="https://codehs.com/uploads/4f38a5f00ab0d48ee9a25ed82d1ce29b" width="100" class="card-img-top" alt="...">
+    <img src="https://codehs.com/uploads/4f38a5f00ab0d48ee9a25ed82d1ce29b" width="100" height="150" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Intersteller (2014)</h5>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
