--- a/toprated.html
+++ b/toprated.html
@@ -33,7 +33,7 @@
     <img src="https://codehs.com/uploads/08c86ba94e961aad3581686400160fef" width="100" height="450" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Whiplash (2016)</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text">Whiplash is a Marvelous film praised for its thrilling intensity, electrifying performances (especially J.K. Simmons as the abusive instructor Fletcher), and gripping exploration of ambition, obsession, and the brutal pursuit of musical greatness, structured like a sports movie where a young drummer's relentless drive pushes him and his mentor to extreme physical and psychological limits, ultimately questioning if true genius justifies such ruthless methods. </p>
     </div>
     <div class="card-footer">
       <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -43,7 +43,7 @@
     <img src="https://codehs.com/uploads/4f38a5f00ab0d48ee9a25ed82d1ce29b" width="100" height="450" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Intersteller (2014)</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text">Interstellar (2014) is a visually stunning, emotionally resonant sci-fi epic about humanity's search for a new home as Earth faces environmental collapse, following a pilot, Cooper, through a wormhole into deep space, exploring complex themes of love, sacrifice, time, and humanity's place in the universe with mind-bending science and a powerful emotional core, particularly the father-daughter bond, making it a deeply affecting and ambitious cinematic experience. </p>
     </div>
     <div class="card-footer">
       <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -53,7 +53,7 @@
     <img src="https://codehs.com/uploads/5f49183202dc22095a9f4b33c959e210" width="100" height="450" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">The Departed (2006)</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text">The Departed (2006) is a critically acclaimed, intense Martin Scorsese crime thriller about a mole in the police (Matt Damon) and an undercover cop (Leonardo DiCaprio) infiltrating the Irish mob in Boston, creating a high-stakes game of cat-and-mouse, praised for its stellar acting (Nicholson, DiCaprio, Damon), gripping plot, masterful direction, and deep exploration of loyalty, identity, and betrayal. </p>
     </div>
     <div class="card-footer">
       <small class="text-body-secondary">Last updated 3 mins ago</small>
