--- a/toprated.html
+++ b/toprated.html
@@ -64,9 +64,9 @@
         
 <div class="card-group">
   <div class="card">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="https://codehs.com/uploads/14408de6bb6144c8992cb911f175b621" width="100" height="450" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Good Will Hunting (1997)</h5>
+      <h5 class="card-title">Fight Club (1999)</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
     </div>
     <div class="card-footer">
@@ -74,9 +74,9 @@
     </div>
   </div>
   <div class="card">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="https://codehs.com/uploads/27a5424c954206a7999de2b5d8480615" class="card-img-top" width="100" height="450" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Intersteller (1995)</h5>
+      <h5 class="card-title">Good Will Hunting (1997)</h5>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
     </div>
     <div class="card-footer">
@@ -84,9 +84,9 @@
     </div>
   </div>
   <div class="card">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="https://codehs.com/uploads/fb7ed457a8b7ad3055d8d60693a1f461" class="card-img-top" width="100" height="450" alt="...">
     <div class="card-body">
-      <h5 class="card-title">The Departed (1994)</h5>
+      <h5 class="card-title">The Shawshank Redemption(1994)</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
     </div>
     <div class="card-footer">
@@ -98,7 +98,7 @@
               
 <div class="card-group">
   <div class="card">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="https://codehs.com/uploads/09b54ebe94df364b447dc2edb1250b32" class="card-img-top" width="100" height="450" alt="...">
     <div class="card-body">
       <h5 class="card-title">Goodfellas (1990)</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -108,7 +108,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="https://codehs.com/uploads/3d00a2d130d608d493a9926bf89de4da" class="card-img-top" width="100" height="450" alt="...">
     <div class="card-body">
       <h5 class="card-title">Star Wars: Episode V - The Empire Strikes Back (1980)</h5>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -118,7 +118,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="https://codehs.com/uploads/b80592fc39113f92eaac785e41abf028" class="card-img-top" width="100" height="450" alt="...">
     <div class="card-body">
       <h5 class="card-title"> The Godfather Part II (1974)</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
