--- a/toprated.html
+++ b/toprated.html
@@ -67,7 +67,7 @@
     <img src="https://codehs.com/uploads/14408de6bb6144c8992cb911f175b621" width="100" height="450" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Fight Club (1999)</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text">Fight Club is about a nameless, insomniac office worker feeling alienated by modern consumer culture who meets the charismatic and anarchic soap salesman, Tyler Durden, leading them to form a secret, brutal underground fighting club as a way to feel alive, which spirals into a much larger, radical anti-establishment movement.</p>
     </div>
     <div class="card-footer">
       <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -77,7 +77,7 @@
     <img src="https://codehs.com/uploads/27a5424c954206a7999de2b5d8480615" class="card-img-top" width="100" height="450" alt="...">
     <div class="card-body">
       <h5 class="card-title">Good Will Hunting (1997)</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text">Good Will Hunting is a celebrated drama about Will Hunting, a brilliant but troubled South Boston janitor with a genius-level IQ and a difficult past, who hides his talent and pushes people away until a psychology professor pairs him with a therapist, Sean Maguire (Robin Williams), to help him confront his trauma and potential.</p>
     </div>
     <div class="card-footer">
       <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -87,7 +87,7 @@
     <img src="https://codehs.com/uploads/fb7ed457a8b7ad3055d8d60693a1f461" class="card-img-top" width="100" height="450" alt="...">
     <div class="card-body">
       <h5 class="card-title">The Shawshank Redemption(1994)</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text">The Shawshank Redemption is widely hailed as a masterpiece for its powerful, uplifting story about hope, friendship, and perseverance in the grim setting of a maximum-security prison, following wrongfully convicted banker Andy Dufresne (Tim Robbins) and his bond with inmate Red (Morgan Freeman) over many years, featuring iconic moments of quiet triumph, cathartic justice, and an unforgettable message of finding light in darkness. </p>
     </div>
     <div class="card-footer">
       <small class="text-body-secondary">Last updated 3 mins ago</small>
